Fixed visible title in posts of online users

--- a/css/vk.feed.css
+++ b/css/vk.feed.css
@@ -4,4 +4,5 @@
 	height:60px;
 	opacity:.2;
 	}
+.wall_module .post_online.clearvk-showTop {min-height:60px;}
 .clearvk-hideAll {display:none;}
